<resources>
    <string name="app_name">Proteinium</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="tvSkip">Skip</string>
    <string name="tvSignup">Sign Up</string>
    <string name="tvName">Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvFname">First Name</string>
    <string name="tvMname">Middle Name</string>
    <string name="tvLname">Last Name</string>
    <string name="no_name_first">Please enter your first name</string>
    <string name="no_name_middle">Please enter your middle name</string>
    <string name="no_name_last">Please enter your last name</string>
    <string name="tvPassword">Password</string>
    <string name="tvConfirmPassword">Confirm Password</string>
    <string name="tvPhoneNumber">Phone Number</string>
    <string name="tvAlternativeNumber">Alternative Number</string>
    <string name="tvTermsText">Agree </string>
    <string name="tvTermsAndConditions">Terms and Conditions</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="tvBackTo">Back To </string>
    <string name="tvSignIn">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="username">Username</string>
    <string name="title_home">Home</string>
    <string name="title_calender">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvMyProfile">My Profile</string>
    <string name="tvDislike">Dislikes</string>
    <string name="tvSubscriptionHistory">Subscription History</string>
    <string name="tvSettings">Settings</string>
    <string name="tvLogout">Log Out</string>
    <string name="title_nill"></string>
    <string name="more_options">More Options</string>
    <string name="title_myaccount">My Account</string>
    <string name="tvAboutUs">About Us</string>
    <string name="tvContactUs">Contact Us</string>
    <string name="tvPrivacyPolicy">Privacy Policy</string>
    <string name="tvyourName">Your Name</string>
    <string name="_1_87_9879_9097">+1 87 9879 9097</string>
    <string name="tvMessage">Message</string>
    <string name="bugra_onlinemarket_com">bugra@onlinemarket.com</string>
    <string name="tvsubmit">Submit</string>
    <string name="lloyd_knight">Lloyd Knight</string>
    <string name="lioydknuught_gmail_ccom">Lioydknuught@gmail.ccom</string>
    <string name="male">Male</string>
    <string name="_9899231984">9899231984</string>
    <string name="tvChangePassword">Change Password</string>
    <string name="change_password">Change password</string>
    <string name="tvNewPassword">New Password</string>
    <string name="tvconfirmPassword">Confirm Password</string>
    <string name="tvCategory">Weight Loss</string>
    <string name="tvCategoryItemTitle1">Three Meal Per Day</string>
    <string name="tvCategoryItems">3 Meals, 2 Snacks, 1 Salad</string>
    <string name="spGender">Gender</string>
    <string name="tvForgotPassword">Forgot Password</string>
    <string name="tvForgotPasswordDes">Please enter your email to receive a link to create a new password via email</string>
    <string name="btnSend">Send</string>
    <string name="tvEditProfileText">Edit Profile</string>
    <string name="etProfileName">Name</string>
    <string name="etProfileEmail">Email</string>
    <string name="etProfileMobile">Mobile Number</string>
    <string name="fish">Fish</string>
    <string name="_178545869">#178545869</string>
    <string name="weight_loss_2_meals_day">Weight Loss - 2 meals/day</string>
    <string name="view_details">View Details</string>
    <string name="subscription_preview">SUBSCRIPTION DETAILS</string>
    <string name="status">Status</string>
    <string name="fullcollen">:</string>
    <string name="kwd_222_00_month">KWD 222.00 / Month</string>
    <string name="start_date">Start Date :</string>
    <string name="_11_1_2021">11/1/2021</string>
    <string name="end_date">End Date :</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="kuwait_towers">Kuwait Towers</string>
    <string name="address">Address :</string>
    <string name="dasman_arabian_gulf_street">Dasman, Arabian Gulf Street,</string>
    <string name="kuwait_city">Kuwait City,</string>
    <string name="telephone">Telephone:</string>
    <string name="_96522444119">+96522444119</string>
    <string name="payment_method">Payment Method</string>
    <string name="renew">Renew</string>
    <string name="tvSubscriptionpreview">Subscription Details</string>
    <string name="tvpush_notification">Push Notification</string>
    <string name="save">Save</string>
    <string name="contact_us_in_whatsapp">Contact us in Whatsapp</string>
    <string name="area">Area</string>
    <string name="avenue">Avenue</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="building">Building/House</string>
    <string name="floor">Floor</string>
    <string name="appartment">Apartment</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="checkout">Checkout</string>
    <string name="select_address">Select Address</string>
    <string name="add_address">Add Address +</string>
    <string name="plan_summary">Plan Summary</string>
    <string name="duration">Duration</string>
    <string name="_2_weeks">2 Weeks</string>
    <string name="_2_meals_day">2 Meals / Day</string>
    <string name="kwd_5245_00">KWD 5245.00</string>
    <string name="carbs_50g">Carbs 50g</string>
    <string name="kwd_256_00">KWD 0.000</string>
    <string name="kwd">KWD\u0020</string>
    <string name="protein_100g">Protein</string>
    <string name="none_stop">Non Stop</string>
    <string name="kwd_599_00">KWD 599.00</string>
    <string name="sub_total">Sub Total</string>
    <string name="kwd_7500_00">KWD 7500.00</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="_4755d77d">#4755d77d</string>
    <string name="you_have_saved_kwd_152_00_on_the_bill">You have saved KWD </string>
    <string name="grand_total">Grand Total</string>
    <string name="kwd_5000_00">KWD 0.000</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="_653_nostrand_ave_brooklyn_ny_11216">653 Nostrand Ave., Brooklyn, NY 11216</string>
    <string name="select">Select</string>
    <string name="tvNotification">Notification</string>
    <string name="rate_the_food">Rate the food</string>
    <string name="submit">Submit</string>
    <string name="please_remove_an_item_from_your_selections">Please remove an item from your selection and select again</string>
    <string name="ok">Ok</string>
    <string name="the_selected_meal_includes_egg_that_you_dislike_would_you_like_to_add_it">The selected meal includes Egg that you dislike. Would you like to add it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tvselectmeal">Select Meal</string>
    <string name="thank_you">Thank you</string>
    <string name="for_subscribing">for subscribing</string>
    <string name="payment_id">Payment id</string>
    <string name="_45755448">#45755448</string>
    <string name="transaction_id">Transaction id</string>
    <string name="_444454655465654">#444454655465654</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="meals">Meals</string>
    <string name="make_payment">Pay</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out</string>
    <string name="cancel">Cancel</string>
    <string name="app_version">App Version</string>
    <string name="_1_02_01">1.02.01</string>
    <string name="about_company">About Company</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="tvNotifications">Notifications</string>
    <string name="notification_one">Notification one</string>
    <string name="_10_2_2012">10/2/2012</string>
    <string name="governorate">Governorate</string>
    <string name="verify">Verify</string>
    <string name="otp_has_been_sent_to_your_registered_email_id">OTP Has been sent to your registered email id</string>
    <string name="didn_t_receive_code">Didn\'t receive code ?</string>
    <string name="resend">Resend</string>
    <string name="_01_03_2021">01/03/2021</string>
    <string name="start_date_one">Start Date</string>
    <string name="end_date_one">End Date</string>
    <string name="_31_03_2021">31/03/2021</string>
    <string name="tap_on_a_day_to_choose_your_meals">Tap on the date to choose your meals. Please choose your meals 48hours before the delivery date</string>
    <string name="choosed_meals">Choosed Meals</string>
    <string name="resume">Resume</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="choose_meals">Choose Meals</string>
    <string name="pause">Pause</string>
    <string name="successfully_delivered">Successfully Delivered</string>
    <string name="low_carb">Low Carb</string>
    <string name="classic_ceasar_salad">Classic Ceasar Salad</string>
    <string name="_4_5">4/5</string>
    <string name="rate_food">Rate Food</string>
    <string name="ingredients_and_macros">Ingredients and Macros</string>
    <string name="mealsperday">2 Meals / Day</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="switchMaterial">Set address as default</string>
    <string name="additional_direction">Additional Direction</string>
</resources>