<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_35dp"
        android:layout_marginEnd="@dimen/margin_35dp">

        <TextView
            android:id="@+id/tvSkipSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSkip"
            android:fontFamily="@font/segoe_ui_bold"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/light_black"
            android:layout_marginTop="@dimen/margin_27dp"
            android:paddingTop="@dimen/margin_5dp"
            android:paddingBottom="@dimen/margin_5dp"
            android:paddingEnd="@dimen/margin_5dp"
            android:paddingStart="@dimen/margin_10dp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:gravity="end"
            android:layout_gravity="end"
            />
        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSignup"
            android:fontFamily="@font/segoe_ui_bold"
            android:textSize="@dimen/text_size_30sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_20dp"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvFname"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:layout_gravity="center"
            android:fontFamily="@font/segoe_ui"
            android:inputType="textPersonName"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_20dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"/>

        <EditText
            android:id="@+id/etMiddleName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvMname"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:layout_gravity="center"
            android:fontFamily="@font/segoe_ui"
            android:inputType="textPersonName"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_20dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"/>
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvLname"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:layout_gravity="center"
            android:fontFamily="@font/segoe_ui"
            android:inputType="textPersonName"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_20dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvEmail"
            android:layout_gravity="center"
            android:fontFamily="@font/segoe_ui"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"
            />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/border_rounded_light_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:gravity="start|center"
                android:hint="@string/spGender"
                android:paddingStart="@dimen/margin_35dp"
                android:paddingEnd="@dimen/margin_35dp"
                android:spinnerMode="dropdown"
                android:theme="@style/ToolbarTheme"
                android:visibility="gone"
                app:theme="@style/ToolbarTheme" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/margin_35dp"
                android:paddingStart="@dimen/margin_35dp"
                android:src="@drawable/ic_arrow_drop_down_black" />

        </RelativeLayout>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvPassword"
            android:fontFamily="@font/segoe_ui"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_14sp"
            android:inputType="textPassword"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"
            />
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvConfirmPassword"
            android:fontFamily="@font/segoe_ui"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"
            />
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvPhoneNumber"
            android:fontFamily="@font/segoe_ui"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_14sp"
            android:maxLength="10"
            android:layout_gravity="center"
            android:inputType="number"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"
            />
        <EditText
            android:id="@+id/etAlternativeNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tvAlternativeNumber"
            android:textAllCaps="false"
            android:fontFamily="@font/segoe_ui"
            android:textSize="@dimen/text_size_14sp"
            android:maxLength="10"
            android:layout_gravity="center"
            android:inputType="number"
            android:textColor="@color/light_black"
            android:background="@drawable/border_rounded_light_white"
            android:layout_marginTop="@dimen/margin_15dp"
            android:paddingStart="40dp"
            tools:ignore="RtlCompat"
            android:textAlignment="viewStart"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearTermsAndConditions"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_16dp"
            >

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:id="@+id/rbTermsAndCondtion"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/tvTermsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTermsText"
                android:fontFamily="@font/segoe_ui"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tvTermsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTermsAndConditions"
                android:textAllCaps="false"
                android:fontFamily="@font/segoe_ui"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/light_blue"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:layout_marginStart="@dimen/margin_3dp"
                />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:fontFamily="@font/segoe_ui_semibold"
            android:text="@string/btnSignUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:backgroundTint="@color/color_main"
            app:cornerRadius="@dimen/radius_24dp"
            app:strokeColor="@color/color_main"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearBackToSignIn"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvBackTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/segoe_ui"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tvSignUpSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSignIn"
                android:textAllCaps="false"
                android:fontFamily="@font/segoe_ui_semibold"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/color_main"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:layout_marginStart="@dimen/margin_5dp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>